ontotext-yasgui-web-component/src/components/saved-queries-popup/saved-queries-popup.scss
@import "src/css/variables";

:host {
  display: block;
}

.saved-queries-container {
  position: absolute;
  // prevent CodeMirror stuff to overlap the popup
  z-index: 1015;
  border: 1px solid #ccc;
  font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif;
  font-weight: 300;
  background-color: #fff;

  .saved-queries-popup {
    height: 250px;
    width: 300px;
    overflow-y: scroll;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);

    ul {
      padding: 15px;
      margin: 0;

      .saved-query {
        position: relative;
        display: flex;
        justify-content: space-between;
        padding: 5px 0;
        list-style-type: none;

        &:hover {

          .saved-query-actions {
            display: block;
          }
        }

        a {
          flex-grow: 2;
          text-decoration: none;
          cursor: pointer;
          color: $color-onto-blue;

          &:hover {
            text-decoration: underline;
          }
        }

        .saved-query-actions {
          display: none;
          position: absolute;
          right: 0;
        }

        .saved-query-action {
          border: none;
          background-color: #fff;
          color: $color-ontotext-orange;
          outline: none;
          cursor: pointer;
          font-size: 1em;
          transition: all .15s ease-out;

          &:hover {
            color: $color-ontotext-orange-dark;
            transform: scale(1.2);
          }
        }
      }
    }
  }

  .arrow {
    position: absolute;
    display: block;
    right: calc(-0.5rem - 1px);
    width: 8px;
    height: 16px;
    margin: 0.3rem 0;

    &::before, &::after {
      position: absolute;
      display: block;
      content: "";
      border-color: transparent;
      border-style: solid;
    }

    &::before {
      right: 0;
      border-width: 0.5rem 0 0.5rem 0.5rem;
      border-left-color: rgba(0,0,0,.25);
    }

    &::after {
      right: 1px;
      border-width: 0.5rem 0 0.5rem 0.5rem;
      border-left-color: #fff;
    }
  }
}

